fixed panel-control class css + character jump animation + sound

--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ canvas {
 }
 
 
-@media only screen and (min-width: 720px) 
+@media only screen and (min-width: 667px) 
                    and (orientation: landscape)
                    and (hover: none)
                    and (pointer: coarse){
@@ -332,16 +332,7 @@ canvas {
         /* Display & box model */
         display: none;
     }
-}
 
-
-@media only screen and (max-width: 480px) {
-    .canvas {
-        width: 100vh;
-    }
-}
-
-@media only screen and (max-width: 720px) {
     .canvas {
         height: 100%;
         width: 100%;
@@ -366,6 +357,28 @@ canvas {
         background-color: rgba(247, 192, 101, 0.6);
     }
 }
+
+
+@media only screen and (min-width: 720px) and (orientation: landscape) {
+    .panel-control {
+        display: none;
+    } 
+}
+
+
+@media only screen and (min-width: 720px) and (orientation: portrait) {
+    .panel-control {
+        display: none;
+    } 
+}
+
+
+@media only screen and (max-width: 480px) {
+    .canvas {
+        width: 100vh;
+    }
+}
+
 
 /* Fonts
    ========================================================================== */
